--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.7.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
